<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".NoteTakerActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_note"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/app_name"
        app:titleTextColor="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_save"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:contentDescription="@string/save_icon"
                android:layout_alignParentEnd="true"
                android:src="@drawable/save_icon"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:padding="8dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:autofillHints=""
        android:inputType=""
        android:singleLine="true"/>
    <EditText
        android:id="@+id/edit_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_text"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:padding="8dp"
        android:textStyle="normal"
        android:textSize="18sp"
        android:autofillHints=""
        android:inputType=""/>
</LinearLayout>